syntax = "proto3";

package protobuf_go.encoding.testing.proto.v3;

option go_package = "protobuf-go/encoding/testing/proto/v3";

message SingleUInt64 {
    uint64 fut = 1;
}

message MultipleUInt64 {
    uint64 one = 1;
    uint64 two = 2;
}